[gd_scene load_steps=2 format=3 uid="uid://ckkhsf5miij1n"]

[ext_resource type="Script" uid="uid://d2t2ohfotkgp" path="res://game_ui.gd" id="1_ue6oa"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ue6oa")

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="Start" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -15.5
offset_right = 47.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "NEW GAME"

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
